# pyrd

./: Cargo.toml  README.md  t.py  t1.py
src/: lib.rs
