[package]
name = "pyrd"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
mobc-redis = { version = "0.8.2", features = ["async-std-comp"] }
pyo3 = { version = "0.20.2", features = ["extension-module"] }
redis = { version = "0.24.0", features = ["async-std-comp"] }
serde = { version = "1.0.196", features = ["serde_derive"] }
serde_json = "1.0.112"
